add_executable(poisson poisson.cpp $<TARGET_OBJECTS:scaleupROMObj>)
add_executable(poisson_serial poisson_serial.cpp $<TARGET_OBJECTS:scaleupROMObj>)
add_executable(poisson_1d poisson_1d.cpp $<TARGET_OBJECTS:scaleupROMObj>)
add_executable(multidomain multidomain.cpp $<TARGET_OBJECTS:scaleupROMObj>)
add_executable(dode domain_decomposition.cpp $<TARGET_OBJECTS:scaleupROMObj>)
add_executable(poisson_dg poisson_dg.cpp $<TARGET_OBJECTS:scaleupROMObj>)
add_executable(yaml_example yaml_example.cpp $<TARGET_OBJECTS:scaleupROMObj>)
add_executable(librom_qr librom_qr.cpp $<TARGET_OBJECTS:scaleupROMObj>)
add_executable(librom_svd librom_svd.cpp $<TARGET_OBJECTS:scaleupROMObj>)
add_executable(linalg_interface linalg_interface.cpp $<TARGET_OBJECTS:scaleupROMObj>)
add_executable(friend_class friend_class.cpp $<TARGET_OBJECTS:scaleupROMObj>)
add_executable(block_algebra block_algebra.cpp $<TARGET_OBJECTS:scaleupROMObj>)
add_executable(mfem_sparse_hdf mfem_sparse_hdf.cpp $<TARGET_OBJECTS:scaleupROMObj>)
